feat: add lightning service
Signed-off-by: Lakshya Singh <lakshay.singh1108@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,13 @@ services:
       - 18444:18444
       - 18443:18443
 
+  core-lightning:
+    build:
+      dockerfile: ./Dockerfile
+    volumes:
+      - data:/home/cln/.lightning
+    depends_on:
+      - bitcoin-core
+
 volumes:
   data:
