refactor: use complete build lightning
- add config through compose
- stick to standard name
Signed-off-by: Lakshya Singh <lakshay.singh1108@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,10 @@ services:
   core-lightning:
     build:
       dockerfile: ./Dockerfile
+    command:
+      -conf=/home/cln/.lightning/testnet-config
+      -network=testnet
+      -log-file=/home/cln/.lightning/testnet/lightning.log
     volumes:
       - data:/home/cln/.lightning
     depends_on:
