--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -34,7 +34,8 @@ FROM alpine:3.16 as runner
 
 RUN apk update && \
     apk add \
-      postgresql
+      postgresql \
+      bitcoin-cli
 
 ARG LIGHTNINGD_UID=100
 ENV LIGHTNINGD_HOME=/home/cln
@@ -55,12 +56,7 @@ RUN addgroup -S cln && adduser -S cln -G cln && \
 
 WORKDIR "${LIGHTNINGD_DATA}"
 
-COPY testnet-config .
-COPY testnet-env .
-
 VOLUME ["/home/cln/.lightning"]
-
-USER cln
 
 RUN ["/usr/bin/lightningd", "--version"]
 ENTRYPOINT ["/entrypoint.sh"]
