chore: organize assets
Signed-off-by: Lakshya Singh <lakshay.singh1108@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
         restart: true
     environment:
       EXPOSE_TCP: "true"
-      env_file: ./testnet-env
+      env_file: ./assets/testnet-env
 
 volumes:
   data:
