feat: use own bitcoind copy bitcoin.conf
- entrypoint add datadir for bitcoin-cli as well
Signed-off-by: Lakshya Singh <lakshay.singh1108@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3.8"
 services:
   bitcoin-core:
-    image: ruimarinho/bitcoin-core:23.0-alpine
+    build:
+      dockerfile: ./bitcoind/Dockerfile
     container_name: bitcoind
     command:
       -testnet=1
