feat: health check enabled container
Signed-off-by: Lakshya Singh <lakshay.singh1108@gmail.com>

--- a/bitcoind/Dockerfile
+++ b/bitcoind/Dockerfile
@@ -161,4 +161,7 @@ ENTRYPOINT  [ "/usr/bin/tini", "-g", "-vvv", "--", "/entrypoint.sh" ]
 
 RUN bitcoind -version | grep "Bitcoin Core version v${BITCOIN_VERSION}"
 
+HEALTHCHECK --interval=1m --timeout=3s \
+  CMD ["bitcoin-cli", "getblockcount"]
+
 CMD ["bitcoind"]
