chore: name container and image lightningd
Signed-off-by: Lakshya Singh <lakshay.singh1108@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
   core-lightning:
     build:
       dockerfile: ./Dockerfile
+    image: lightningd
+    container_name: lightningd
     command:
       - --bitcoin-rpcconnect=bitcoind
       - --bitcoin-rpcuser=rpcuser
