fix: separate bitcoin.conf, rpc bind at 0.0.0.0
- remove volument mount to prevent overwrite
- copy bitcoin.conf to home of stock bitcoind home
- rpc bind at 0.0.0.0 for all access
Signed-off-by: Lakshya Singh <lakshay.singh1108@gmail.com>

--- a/bitcoin.conf
+++ b/bitcoin.conf
@@ -8,10 +8,9 @@ testnet=1
 server=1
 rpcuser=rpcuser
 rpcpassword=VLSsigner1
+rpcconnect=bitcoind
 rpcport=18332
-rpcbind=0.0.0.0
-rpcallowip=0.0.0.0/0
-zmqpubrawblock=tcp://localhost:38332
-zmqpubrawtx=tcp://localhost:38333
+zmqpubrawblock=tcp://bitcoind:38332
+zmqpubrawtx=tcp://bitcoind:38333
 txindex=1
 blockfilterindex=1
