chore: remove debian files use alpine final only
Signed-off-by: Lakshya Singh <lakshay.singh1108@gmail.com>

--- a/assets/bitcoin.conf
+++ b/assets/bitcoin.conf
@@ -2,8 +2,6 @@
 ## bitcoin.conf configuration file. Lines beginning with # are comments.
 ##
 
-testnet=1
-
 [test]
 server=1
 rpcuser=rpcuser
@@ -11,7 +9,8 @@ rpcpassword=VLSsigner1
 rpcport=18332
 rpcbind=0.0.0.0
 rpcallowip=0.0.0.0/0
-zmqpubrawblock=tcp://localhost:38332
-zmqpubrawtx=tcp://localhost:38333
+whitelist=0.0.0.0/0
+zmqpubrawblock=tcp://bitcoind:38332
+zmqpubrawtx=tcp://bitcoind:38333
 txindex=1
 blockfilterindex=1
